--- a/detail.html
+++ b/detail.html
@@ -26,7 +26,7 @@
 
     <!-- detail section -->
     <section class="detail__home dark" >
-        <a class="dark" href="/index.html">
+        <a class="dark" href="./">
             <i class="fa-solid fa-arrow-left-long"></i>  Back
         </a>
         <div class="detail__content">
